--- a/metadata/layout.conf
+++ b/metadata/layout.conf
@@ -1,1 +1,10 @@
 masters = gentoo
+
+# same as GURU
+manifest-hashes = BLAKE2B SHA512
+manifest-required-hashes = BLAKE2B
+update-changelog = false
+cache-formats = md5-dict
+thin-manifests = true
+sign-commits = true
+sign-manifests = false
